--- a/paginas/Nokia6310.html
+++ b/paginas/Nokia6310.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
-
     <script src="app.js"></script>
     <title>KingsPhone</title>
 </head>
@@ -13,8 +12,9 @@
 
     <header>
     <div>
-        <h1>KingsPhone</h1>
+        <a href="../index.html"><h1>KingsPhone</h1></a>
     </div>
+    </header>
 
 </body>
 </html>
