vamo tentando e chorando

--- a/KingsPhone/index.html
+++ b/KingsPhone/index.html
@@ -30,7 +30,7 @@
 <h2>Catalogo</h2>
 
     <ul id="lista">
-            <a href="paginas/Nokia6310.html"><li>
+            <a href="Nokia6310.html"><li>
 
             <h4>'Nokia 6310,</h4>
             <br>
