--- a/KingsPhone/index.html
+++ b/KingsPhone/index.html
@@ -65,10 +65,14 @@
                     <img class="img-responsive" ng-src="{{phone.images[0]}}">
                     <div class="caption text-center">
                         <h4>{{phone.name}}</h4>
-                        
+
                     </div>
                 </div> 
-
+                <div class="panel-footer text-center">
+                    <a class="btn btn-default" role="button" href="#">
+                    <i class="glyphicon glyphicon-zoom-in"></i> Detalhes
+                    </a> 
+                </div>
             </div>
         </li>
     </ul>
